--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,7 +149,7 @@
 		color: #414f57;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 14pt;
-		font-weight: 300;
+		font-weight: bold;
 		line-height: 2;
 		letter-spacing: 0.2em;
 		text-transform: uppercase;
