--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -458,7 +458,7 @@
 				line-height: 1;
 				text-transform: none !important;
 				font-family: 'Font Awesome 5 Free';
-				font-weight: 900;
+				font-weight: bold;
 			}
 
 			input[type="checkbox"] + label:before,
